# Cpp_Sfml_Game

./: .gitignore  CMakeLists.txt  main.cpp
agent/: Agent.py  act.py  init_agent.py  update_q_values.py
agent/model/q_deep_model/: fingerprint.pb  keras_metadata.pb
agent/model/q_deep_model/variables/: variables.index
api/: api.py  note.txt
api/agent/: Agent.py  Environment.py  act.py
api/agent/model/q_deep_model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
api/agent/model/q_deep_model/variables/: variables.index
api/agent/model/q_deep_model_v2/: fingerprint.pb  keras_metadata.pb  saved_model.pb
api/agent/model/q_deep_model_v2/variables/: variables.index
api/data/: label.json
includes/: Agent.h  Game.h  Snake.h  TextBox.h  Window.h
includes/02_chapter/: Game.h  Window.h
includes/03_Snakegame/: Game.h  Snake.h  Window.h
includes/04_chapter/: EventManager.h  Game.h  Window.h
includes/05_state/: EventManager.h  Game.h  StateManager.h  StateType.h  State_Game.h  State_Intro.h  State_MainMenu.h  State_Paused.h  Window.h
src/: Agent.cpp  Game.cpp  Snake.cpp  TextBox.cpp  Window.cpp  World.cpp  utile.py
src/02_chapter/: Game.cpp  Window.cpp
src/03_Snakegame/: Game.cpp  Snake.cpp  TextBox.cpp  Window.cpp  World.cpp
src/04_chapter/: EvenrManager.cpp  Game.cpp  Window.cpp
src/05_state/: EvenrManager.cpp  Game.cpp  StateManager.cpp  State_Game.cpp  State_Intro.cpp  State_MainMenu.cpp  State_Paused.cpp  Window.cpp
